dbeaver/pro#4135 maven config WIP (#48)
* dbeaver/pro#4135 maven config WIP

* dbeaver/pro#4135 update maven generation

* dbeaver/pro#4135 update maven module generation

* dbeaver/pro#4135 WIP

* dbeaver/pro#4135 maven handling

* dbeaver/pro#4135 improve maven config generation

* dbeaver/pro#4135 fix invalid maven configs being generated

* dbeaver/pro#4135 improve resolving

* dbeaver/pro#4135 code quality and use earlier parameter values

* dbeaver/pro#4135 finally works