@@ -9,6 +9,9 @@ import com.dbeaver.osgi.dependency.processing.util.Version;
 import com.dbeaver.osgi.dependency.processing.util.VersionRange;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
+import org.jkiss.tools.rcplaunchconfig.maven.model.MavenDependency;
+import org.jkiss.tools.rcplaunchconfig.maven.processors.MavenPomProcessor;
+import org.jkiss.tools.rcplaunchconfig.maven.registry.MavenLocalArtifactRegistry;
 import org.jkiss.tools.rcplaunchconfig.producers.DevPropertiesProducer;
 import org.jkiss.utils.Pair;
 import org.slf4j.Logger;
@@ -64,6 +67,16 @@ public class IMLConfigurationProducer implements IImportListener {
         log.info("\t- Generating IML configuration " + productPath);
         // Bundles
         List<ModuleInfo> modules = new ArrayList<>();
+        for (Set<BundleInfo> value : result.getBundlesByNames().values()) {
+            for (BundleInfo bundleInfo : value) {
+                if (DevPropertiesProducer.isBundleAcceptable(bundleInfo.getBundleName())) {
+                    if (bundleInfo.getPath() != null) {
+                        MavenPomProcessor.collectArtifacts(bundleInfo.getPath());
+                    }
+                }
+            }
+        }
+
         for (Set<BundleInfo> bundles : result.getBundlesByNames().values()) {
             for (BundleInfo bundleInfo : bundles) {
                 if (this.modules.contains(bundleInfo)) {
@@ -98,7 +111,20 @@ public class IMLConfigurationProducer implements IImportListener {
         }
         log.info(modules.size() + " module IML configs associated for " + result.getProductName());
         this.modules.addAll(modules);
+        rootModules.addAll(generateMavenModules());
         rootModules.addAll(generateRootModules());
+    }
+
+    private Collection<? extends Path> generateMavenModules() throws IOException {
+        Set<Path> presentModules = PathsManager.INSTANCE.getMavenModules()
+            .stream()
+            .filter(it -> it.toFile().exists())
+            .collect(Collectors.toSet());
+        presentModules.forEach(MavenPomProcessor::collectArtifacts);
+        Set<Path> rootModules = new LinkedHashSet<>();
+        Path imlModuleRoot = PathsManager.INSTANCE.getImlModulesPath();
+        createModules(presentModules, imlModuleRoot, rootModules, true);
+        return rootModules;
     }
 
     /**
@@ -238,16 +264,20 @@ public class IMLConfigurationProducer implements IImportListener {
             .collect(Collectors.toSet());
         Set<Path> rootModules = new LinkedHashSet<>();
         Path imlModuleRoot = PathsManager.INSTANCE.getImlModulesPath();
+        Path rootIml = imlModuleRoot.resolve(imlModuleRoot.getFileName() + ".iml");
+        createModules(presentModules, imlModuleRoot, rootModules, false);
+        createConfigFile(rootIml, generateImlRepositoryRootModule(imlModuleRoot));
+        rootModules.add(rootIml);
+        return rootModules;
+    }
+
+    private void createModules(Set<Path> presentModules, Path imlModuleRoot, Set<Path> rootModules, boolean isMaven) throws IOException {
         for (Path presentModule : presentModules) {
-            String rootModuleConfig = generateRootModule(presentModule);
+            String rootModuleConfig = generateNonOSGIModule(presentModule, isMaven);
             Path rootIml = imlModuleRoot.resolve(presentModule.getFileName() + ".iml");
             rootModules.add(rootIml);
             createConfigFile(rootIml, rootModuleConfig);
         }
-        Path rootIml = imlModuleRoot.resolve(imlModuleRoot.getFileName() + ".iml");
-        createConfigFile(rootIml, generateImlRepositoryRootModule(imlModuleRoot));
-        rootModules.add(rootIml);
-        return rootModules;
     }
 
     private static boolean isMacOS() {
@@ -267,12 +297,22 @@ public class IMLConfigurationProducer implements IImportListener {
             "</module>";
     }
 
-    private String generateRootModule(@NotNull Path presentModule) throws IOException {
-        StringBuilder productExcludes = new StringBuilder();
+    private String generateNonOSGIModule(@NotNull Path presentModule, boolean isMaven) throws IOException {
+        StringBuilder productExcludesAndIncludes = new StringBuilder();
         Map<Path, String> productsPathsAndWorkDirs = PathsManager.INSTANCE.getProductsPathsAndWorkDirs();
+        if (isMaven) {
+            productExcludesAndIncludes.append("        <sourceFolder url=\"")
+                .append(getFormattedRelativePath(presentModule.resolve("src/main/java"), false, false))
+                .append("\"/>").append("\n");
+            productExcludesAndIncludes.append("        <sourceFolder url=\"")
+                .append(getFormattedRelativePath(presentModule.resolve("src"), false, false))
+                .append("\"/>").append("\n");
+            productExcludesAndIncludes.append("        <excludeFolder url=\"")
+                .append(getFormattedRelativePath(presentModule.resolve("target"), false, false)).append("\"/>").append("\n");
+        }
         for (Path productConfigPath : productsPathsAndWorkDirs.keySet()) {
             if (productConfigPath.startsWith(presentModule)) {
-                productExcludes.append("        <excludeFolder url=\"")
+                productExcludesAndIncludes.append("        <excludeFolder url=\"")
                     .append(getFormattedRelativePath(presentModule, false, false))
                     .append("/").append(presentModule.relativize(productConfigPath.getParent()).toString().replace("\\", "/"))
                     .append("/target\"/>\n");
@@ -280,12 +320,13 @@ public class IMLConfigurationProducer implements IImportListener {
         }
         for (Path excludePath : PathsManager.INSTANCE.getExcludePaths()) {
             if (excludePath.startsWith(presentModule)) {
-                productExcludes.append("        <excludeFolder url=\"")
+                productExcludesAndIncludes.append("        <excludeFolder url=\"")
                     .append(getFormattedRelativePath(presentModule, false, false))
                     .append("/").append(presentModule.relativize(excludePath).toString().replace("\\", "/"))
                     .append("\"/>\n");
             }
         }
+
         for (Path additionalRepositoriesPath : PathsManager.INSTANCE.getAdditionalRepositoriesPaths()) {
             try (Stream<Path> stream = Files.walk(additionalRepositoriesPath, 2)) {
                 List<Path> categoryXMLS = stream.filter(Files::isRegularFile)
@@ -293,7 +334,7 @@ public class IMLConfigurationProducer implements IImportListener {
                     .toList();
                 for (Path categoryXML : categoryXMLS) {
                     if (categoryXML.getParent().startsWith(presentModule)) {
-                        productExcludes.append("        <excludeFolder url=\"")
+                        productExcludesAndIncludes.append("        <excludeFolder url=\"")
                             .append(getFormattedRelativePath(presentModule, false, false))
                             .append("/").append(presentModule.relativize(categoryXML.getParent())
                                 .resolve("target")
@@ -304,18 +345,38 @@ public class IMLConfigurationProducer implements IImportListener {
                 }
             }
         }
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<module type=\"JAVA_MODULE\" version=\"4\">\n" +
-            "  <component name=\"NewModuleRootManager\">\n" +
-            "    <output url=\"file://$MODULE_DIR$/target/classes\" />\n" +
-            "    <output-test url=\"file://$MODULE_DIR$/target/classes\" />\n" +
-            "    <content url =\"" + getFormattedRelativePath(presentModule, false, false) + "\">\n" +
-            productExcludes +
-            "    </content>\n" +
-            "    <orderEntry type=\"inheritedJdk\" />\n" +
-            "    <orderEntry type=\"sourceFolder\" forTests=\"false\" />\n" +
-            "  </component>\n" +
-            "</module>";
+        if (isMaven) {
+            StringBuilder moduleImports = new StringBuilder();
+            appendMavenDependencies(presentModule, moduleImports);
+            return new StringBuilder().append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n")
+                .append("<module type=\"JAVA_MODULE\" version=\"4\">\n")
+
+                .append("  <component name=\"NewModuleRootManager\" LANGUAGE_LEVEL=\"JDK_17\">\n")
+                .append("  <exclude-output/>")
+                .append("  <output url=\"")
+                .append(getFormattedRelativePath(presentModule.resolve("target/classes"), false, false))
+                .append("\"/>").append("\n")
+                .append("  <content url=\"").append(getFormattedRelativePath(presentModule, false, false)).append("\">\n")
+                .append(productExcludesAndIncludes)
+                .append("  </content>\n").append(moduleImports)
+                .append("  <orderEntry type=\"inheritedJdk\" />\n")
+                .append("  <orderEntry type=\"sourceFolder\" forTests=\"false\" />\n").append("  </component>\n").append("</module>")
+                .toString();
+        } else {
+            return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+                "<module type=\"JAVA_MODULE\" version=\"4\">\n" +
+                "  <component name=\"NewModuleRootManager\">\n" +
+                "    <output url=\"file://$MODULE_DIR$/target/classes\" />\n" +
+                "    <output-test url=\"file://$MODULE_DIR$/target/classes\" />\n" +
+                "    <content url =\"" + getFormattedRelativePath(presentModule, false, false) + "\">\n" +
+                productExcludesAndIncludes +
+                "\n" +
+                "    </content>\n" +
+                "    <orderEntry type=\"inheritedJdk\" />\n" +
+                "    <orderEntry type=\"sourceFolder\" forTests=\"false\" />\n" +
+                "  </component>\n" +
+                "</module>";
+        }
     }
 
     /**
@@ -487,7 +548,7 @@ public class IMLConfigurationProducer implements IImportListener {
                         if (!alreadyResolved) {
                             appendLibraryInfo(
                                 builder,
-                                bundleInfos.get(0).getFirst(),
+                                bundleInfos.getFirst().getFirst(),
                                 result,
                                 resolvedBundles,
                                 isLibrary
@@ -538,6 +599,16 @@ public class IMLConfigurationProducer implements IImportListener {
         return getFormattedRelativePath(pathToFormat, jar, useProjectDir, false);
     }
 
+    private String getFormattedRelativeMavenPath(@NotNull Path pathToFormat) {
+        String type = "jar:";
+        String prefix = type + "//$MAVEN_REPOSITORY$/";
+        return prefix + getRelativizeMavenPath(pathToFormat).toString().replace("\\", "/") + ("!/");
+    }
+
+    @NotNull
+    private Path getRelativizeMavenPath(@NotNull Path bundlePath) {
+        return getMavenRepositoryPath().relativize(bundlePath);
+    }
 
     @NotNull
     private Path getRelativizedPath(@NotNull Path bundlePath) {
@@ -564,12 +635,13 @@ public class IMLConfigurationProducer implements IImportListener {
         Properties properties = readBuildConfiguration(bundleInfo.getPath());
         List<String> outputs = properties.get("output..") != null ? List.of(((String) properties.get("output..")).split(",")) : List.of();
         if (!outputs.isEmpty()) {
-            builder.append("  <output url=\"").append(getFormattedRelativePath(bundleInfo.getPath().resolve(outputs.get(0)), false, false))
+            builder.append("  <output url=\"")
+                .append(getFormattedRelativePath(bundleInfo.getPath().resolve(outputs.getFirst()), false, false))
                 .append("\"/>").append("\n");
         }
         builder.append("  <exclude-output/>").append("\n");
         List<String> sources = properties.get("source..") != null ? List.of(((String) properties.get("source..")).split(",")) : List.of();
-        boolean hasContent = !sources.isEmpty() && !sources.get(0).isEmpty();
+        boolean hasContent = !sources.isEmpty() && !sources.getFirst().isEmpty();
 
         if (hasContent) {
             builder.append("  <content url=\"").append(getFormattedRelativePath(bundleInfo.getPath(), false, false)).append("\">")
@@ -624,7 +696,7 @@ public class IMLConfigurationProducer implements IImportListener {
                         }
                     }
                     if (!alreadyResolved) {
-                        BundleInfo info = bundleInfos.get(0).getFirst();
+                        BundleInfo info = bundleInfos.getFirst().getFirst();
                         appendBundleInfo(
                             bundleInfo,
                             new Pair<>(info.getBundleName(), importPackage.getSecond()),
@@ -681,6 +753,43 @@ public class IMLConfigurationProducer implements IImportListener {
         builder.append(" </component>").append("\n");
         builder.append("</module>");
         return builder.toString();
+    }
+
+    private void appendMavenDependencies(@NotNull Path path, @NotNull StringBuilder builder) throws IOException {
+        List<MavenDependency> dependencies = MavenPomProcessor.processDependencies(path);
+        Set<Path> processedDependencies = new HashSet<>();
+        for (MavenDependency dependency : dependencies) {
+            Path dependencyPath = MavenLocalArtifactRegistry.INSTANCE.getProvidedDependencyPath(dependency) == null ?
+                MavenLocalArtifactRegistry.INSTANCE.getDowloadedDependencyPath(dependency) :
+                MavenLocalArtifactRegistry.INSTANCE.getProvidedDependencyPath(dependency);
+            if (processedDependencies.contains(dependencyPath)) {
+                continue; // Skip already processed dependencies
+            }
+            boolean isThirdParty = dependencyPath.toRealPath().startsWith(getMavenRepositoryPath());
+            processedDependencies.add(dependencyPath);
+            if (isThirdParty) {
+                builder.append("  <orderEntry type=\"" + "module-library" + "\" exported=\"\">\n");
+                builder.append("    <library>\n");
+                builder.append("      <CLASSES>\n");
+                builder.append("        <root url=\"")
+                    .append(getMavenDependencyPath(dependencyPath))
+                    .append("\"/>\n");
+                builder.append("      </CLASSES>\n");
+                builder.append("      <JAVADOC />\n");
+                builder.append("      <SOURCES />\n");
+                builder.append("    </library>\n");
+                builder.append("  </orderEntry>\n");
+            } else {
+                builder.append("  <orderEntry type = \"module\" module-name=\"").append(dependencyPath.getFileName())
+                    .append("\" exported=\"\"").append("/>").append("\n");
+            }
+        }
+    }
+
+    @NotNull
+    private String getMavenDependencyPath(Path dependencyPath) throws IOException {
+        return dependencyPath.toRealPath().startsWith(getMavenRepositoryPath()) ? getFormattedRelativeMavenPath(dependencyPath)
+            : getFormattedRelativePath(dependencyPath, false, false);
     }
 
     private void appendResourceSources(Path path, StringBuilder builder) {
@@ -910,6 +1019,10 @@ public class IMLConfigurationProducer implements IImportListener {
 
     private Path getLibraryConfigPath() {
         return getIdeaConfigsPath().resolve("libraries/");
+    }
+
+    private Path getMavenRepositoryPath() {
+        return PathsManager.INSTANCE.getMavenRepoPath();
     }
 
     private Path getXMLRunConfigurationPath() {
